# AMI_T_3_H_Cpp

./: CMakeLists.txt  README.md  catch.hpp
CATS_files/: CATS.html
LAB 1/: Complex.cpp  Complex.h  README.md  Rational.cpp  Rational.h  tests.cpp
LAB 2/: README.md  hash_map.hpp  tests.cpp
LAB 3/: Character.h  Dragon.h  Enemy.h  GameLoop.h  Gunsight.h  Knight.h  Map.h  Medkit.h  Point.h  Princess.h  README.md  Shooter.h  Wall.h  Zombie.h  main.cpp
tournament 1/: README.md
tournament 1/1_PrimeNumberGenerator/: prime_gen.h
tournament 1/2_Finite_Field(Easy_version)/: Num.cpp  Num.h  main.cpp  num.cpp  num.h
tournament 1/3_Date/: date.cpp  date.h  main.cpp
tournament 1/4_Set/: main.cpp  set.h
tournament 1/5_Finite_Field(Hard_version)/: main.cpp  num.cpp  num.h
tournament 1/6_BufferedReader/: buffered_reader.h  main.cpp
tournament 2/: README.md
tournament 2/1_SmartPointer/: SmartPointer.h  Test_SmartPointer.h  main.cpp
tournament 2/2_factory/: factory.h
tournament 2/3_FixedAllocator/: fixed_allocator.cpp  fixed_allocator.h
tournament 2/3_factory/: main.cpp
tournament 2/4_Code_format_visitor/: format_visitor.h  main.cpp
tournament 2/5_GameDatabase/: game_database.h
tournament 3/: README.md
tournament 3/1_initialize_vector/: initialize_vector.h  main.cpp
tournament 3/2_binary search/: find.h  main.cpp
tournament 3/3_graph_visitor/: main.cpp  visitor.h
tournament 3/4_is_convertable/: is_customly_convertible.h  main.cpp
tournament 4/1_caesar_cipher/: caesar_encrypt.h  gen.cpp  main.cpp  sol.cpp
tournament 4/2_parallel_matrix_multiplication/: main.cpp  matmul.h
tournament 4/3_queue/: main.cpp  solution.hpp
